WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139379
Fix the parsing of advanced :lang() after
r176902
https://bugs.webkit.org/show_bug.cgi?id=139379
Summary
Fix the parsing of advanced :lang() after r176902
Benjamin Poulain
Reported
2014-12-07 17:51:44 PST
Fix the parsing of advanced :lang() after
r176902
Attachments
Patch
(23.05 KB, patch)
2014-12-07 20:19 PST
,
Benjamin Poulain
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-12-07 20:19:39 PST
Created
attachment 242782
[details]
Patch
Mark Lam
Comment 2
2014-12-07 22:59:13 PST
Comment on
attachment 242782
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=242782&action=review
> Source/WebCore/css/CSSParser.cpp:11489 > + }
If you want this ‘}’, then you should move the one at line 11503 before the #endif.
Benjamin Poulain
Comment 3
2014-12-08 00:22:02 PST
Comment on
attachment 242782
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=242782&action=review
>> Source/WebCore/css/CSSParser.cpp:11489 >> + } > > If you want this ‘}’, then you should move the one at line 11503 before the #endif.
Oh crap, my bad. I'll fix that before landing.
Andreas Kling
Comment 4
2014-12-08 14:53:29 PST
Comment on
attachment 242782
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=242782&action=review
r=me
> Source/WebCore/ChangeLog:18 > + The problem is that CSSParserString does not keep the source string alive. > + Consequently, the list of language range was accumulating pointers to dead > + StringImpls.
Whoops!
Benjamin Poulain
Comment 5
2014-12-08 15:54:27 PST
Committed
r176983
: <
http://trac.webkit.org/changeset/176983
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug